--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Speech Recogniser</title>
 
-	<link rel="stylesheet" href="assets/scss/main.css">
+	<link rel="stylesheet" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC&display=swap" rel="stylesheet">
 
 </head>
