--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Speech Recogniser</title>
+	<title>Carlexa</title>
 
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" type ="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC&display=swap" rel="stylesheet">
 
 </head>
