--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 		
 	</div>
 
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/main.js" type="text/javascript"></script>
 </body>
 </html>
